# shopping-list

./: .gitignore  README.md
backend/: Cargo.toml
backend/sql/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
backend/src/: main.rs
backend/src/_tests/: model_db.rs  model_grocery.rs  web_grocery.rs
backend/src/model/: db.rs  grocery.rs  mod.rs
backend/src/security/: mod.rs
backend/src/web/: filter_auth.rs  filter_utils.rs  grocery.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src/: main.ts
frontend/src/model/: grocery-mco.ts
frontend/src/ui/: grocery-mvc.ts
frontend/web-folder/: index.html
frontend/web-folder/css/: main.css
